# jouvence

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REPORT.md  TODO.md  pyproject.toml  txdata_download.py
.omoc/: workflow.json
.openclaw/: ralph_txgnn_kg_completion.md
docs/: README.md  biocypher_neo4j_comparison.md  block1_gene_interacts_gene_audit.md  block1_molecule_targets_gene_audit.md  block1_pathway_contains_gene_evidence_plan.md  block1_relation_source_split_plan.md  block1_validation_report.md  branch_consolidation_review_20260717.md  causal_edge_feature_inventory.json  causal_edge_feature_inventory.sha256  causal_edge_feature_model.md  causal_feature_materialization_t_abbfe5e7.md  clinical_trials_canonical_features_resolution_t_957a3640.md  clinical_trials_evidence_layer_t_f65a077a.md  clinical_trials_gov_canonical_promotion_t_f8841ff7.md  clinical_trials_gov_production_candidate_t_c4f67957.md  clinical_trials_structured_text_pilot_t_a52976cf.md  clinical_trials_text_embedding_full_t_1bf3fb33.md  coding_standards.md  credibility.md  current_state_20260623.md  database_gap_analysis_202606.md  dataset_paper_graph_disconnection_t_c07b8b57.md  disease_causal_operands_canonical_promotion_t_aa5cd96e.md  disease_causal_operands_t_97705d2f.md  disease_manifests_in_tissue_canonical_promotion_t_5fe137a0.md  documentation_audit_20260712.md  edge_evidence_embedding_policy.md  evidence_and_edge_schema_plan.md  formal_relation_inference_t_50a6f3ce.md  formal_relation_inference_t_e8aebc97.md  formal_relation_inference_zero_release_promotion_t_45cd6464.md  foundation_embedding_execution_plan.md  foundation_embedding_manifest.schema.json  foundation_embedding_policy.md  fr.html  full_uniprot_textual_summary_expansion_20260623_t_0b0ca3cb.md  gene_genomic_sequence_feature_candidate_t_720528ea.md  getting-started-data.md  git_reviewability_migration_t_4cab4a2f.md  (+131 more)
manage_db/: audit_edge_evidence.py  audit_kg_coverage.py  audit_lamindb_parity.py  audit_node_ontology_coverage.py  backfill_edge_evidence.py  backfill_protein_expression.py  build_cell_type_context_relations.py  build_chembl_molecule_targets_protein.py  build_complex_portal_protein_complexes.py  build_depmap_repair_candidate.py  build_embedding_pilot.py  build_gene_genomic_sequence_embeddings.py  build_gene_genomic_sequence_features.py  build_hpa_cellular_components.py  build_intact_protein_interactions.py  build_lamindb_kg_manifest.py  build_mutation_associated_phenotype.py  build_mutation_causes_phenotype.py  build_node_missing_features.py  build_nucleotide_sequence_embeddings.py  build_opentargets_gene_paralogs.py  build_paper_dataset_provenance.py  build_pyg_export.py  build_reactome_pathway_protein_membership.py  build_real_embeddings.py  build_sequence_features.py  build_staged_cell_line_assays.py  build_staged_disease_tissue_context.py  build_staged_mirna_targets.py  build_staged_mutation_genomic_edges.py  build_staged_prism_20q2.py  build_staged_rbp_rna_interactions.py  build_textual_summary_features.py  build_uniprot_disease_associated_protein.py  build_uniprot_ptm_sites.py  credibility.py  export_human_organism_slice.py  export_kg.py  finalize_gene_genomic_embedding_candidate.py  i1_bionty_pertdb_import.py  (+35 more)
manage_db/lnschema_txgnn/: __init__.py  models.py  pyproject.toml
manage_db/lnschema_txgnn/migrations/: 0004_protein.py  0005_custom_disease.py  0006_custom_exact_id_gap_registries.py  0007_generic_kg_edge_evidence.py
notebooks/: 01_data_model_and_use_cases.ipynb  02_nodes_features_and_embeddings.ipynb  03_relations_evidence_and_questions.ipynb  04_lamindb_equivalent_queries.ipynb  05_sampled_pyg_heterodata.ipynb  06_sampled_ml_use_cases.ipynb  11_lamin_kg_schema_explorer.ipynb  13_current_kg_state_20260624.ipynb  14_pyg_out_of_core_and_lamin_remaining.ipynb  2_manage_db_setup.executed.ipynb  3_access_and_cache_sources.ipynb  4_download_opentargets_and_source_snapshots.ipynb  5_create_core_nodes.ipynb  6_build_core_edges_and_evidence.ipynb  7_opentargets_edges_and_evidence.ipynb  8_block1_relation_splitting_policy.ipynb  9_source_native_l2_ingestion_index.ipynb  9a_source_native_interactions_summary.ipynb  9b_l2_biological_nodes_context_summary.ipynb  9c_pharmacology_context_metadata_summary.ipynb  9d_non_remap_part2_canonical_promotion_summary.ipynb  Jouvence_Explore.ipynb  README.md  kg_schema_current_status.ipynb  kg_schema_overview.ipynb
reproduce/: 01_lamindb_instance_setup.ipynb  02_manage_db_setup.ipynb  03_access_and_cache_sources.ipynb  09_source_native_ingestion_index.ipynb  10_source_native_interactions_summary.ipynb  11_biological_nodes_context_summary.ipynb  12_pharmacology_context_metadata_summary.ipynb  13_non_remap_canonical_promotion_summary.ipynb  14_ingest_opentargets_legacy.ipynb  README.md  (+10 more)
(+319 files in other folders)
