[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Jouvence"
description = "Source-aware biomedical knowledge graph and drug-repurposing project built on upstream TxGNN"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Jouvence maintainers" }
]
urls = { Homepage = "https://github.com/jkobject/jouvence-graph", Repository = "https://github.com/jkobject/jouvence-graph", Upstream = "https://github.com/mims-harvard/TxGNN" }
dynamic = ["version"]
dependencies = [
  "fsspec>=2024.5.0",
  "gcsfs>=2024.6.1",
  "google-cloud-storage>=2.16.0",
  "goatools==1.5.2",
  "lamindb==2.2.1",
  "lnschema-txgnn",
  "matplotlib==3.10.8",
  "numpy==2.4.2",
  "ipython>=8.18",
  "ipykernel>=6.29",
  "pyarrow>=20",
  "pandas==3.0.0",
  "scikit-learn==1.8.0",
  "tqdm==4.67.3",
  "duckdb>=1.1.0",
  "rdkit>=2025.9.1",
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.28", "playwright>=1.45"]
gnn = ["torch>=2.12", "torch-geometric>=2.8"]
embeddings-text = ["sentence-transformers>=3.0", "torch>=2.12"]
embeddings-edge = ["sentence-transformers>=3.0", "torch>=2.12"]
embeddings-molecule = ["transformers>=4.40", "torch>=2.12", "rdkit>=2025.9.1"]
embeddings-protein = ["fair-esm>=2.0", "torch>=2.12"]
embeddings-nucleotide = ["transformers>=4.40", "torch>=2.12"]
notebooks = ["nbclient>=0.10", "nbformat>=5.10"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.dynamic]
version = { attr = "txgnn.version.__version__" }

[project.scripts]
jouvence-viewer = "manage_db.viewer.cli:main"

# uv workspace — lnschema_txgnn is a separate installable sub-package.
# `uv sync` will install it in editable mode automatically.
[tool.uv.workspace]
members = ["manage_db/lnschema_txgnn"]

[tool.uv]
# lamindb 2.2.x declares pandas<3.0.0, but pandas 3.0 is actually compatible.
# Force our pinned version regardless of that upstream metadata constraint.
override-dependencies = ["pandas==3.0.0"]

[tool.uv.sources]
lnschema-txgnn = { workspace = true }
